# qams_server

./: .gitignore  Cargo.toml  out.txt  sample_data.sql
migrations/: 20260708120330_initial.sql  20260713011554_scorecard_normalisation.sql  20260720063803_report_updates.sql  20260721062048_scorecard_period.sql
src/: db.rs  error.rs  main.rs  models.rs  scorecard.rs
src/handlers/: agents.rs  mod.rs  reports.rs  reviews.rs  scorecards.rs
templates/: agents_list.html  agents_new.html  agents_show.html  base.html  reports_agent.html  reports_agents.html  reports_list.html  reports_new.html  reports_show.html  reports_summary.html  reviews_form.html  reviews_index.html  reviews_show.html  scorecards_edit.html  scorecards_list.html  scorecards_show.html
