[package]
name = "qams_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qams_server"
path = "src/main.rs"

[dependencies]
qams_core = { git = "https://github.com/finleyowen/qams_core", version = "0.1.0" }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dotenvy = "0.15"
